# cga

./: .gitignore  CMakeLists.txt  README.txt
librerias pa no perder/: tbb.lib
photon_mapping/: CMakeLists.txt  main.cpp
photon_mapping/KDTree/: KDTree.h
photon_mapping/common/: CMakeCache.txt
photon_mapping/common/math/: vec3fa.h
photon_mapping/common/sys/: sysinfo.h
photon_mapping/common/tasking/: CMakeLists.txt
photon_mapping/include/: Cubo.h  Light.h  PhotonKDTree.h  Settings.h
photon_mapping/src/: Cubo.cpp  PhotonKDTree.cpp  PhotonMapper.cpp  Raytracer.cpp  Render.cpp  Settings.cpp  SquareLight.cpp  niederreiter2.cpp
photon_mapping/tbb/lib/ia32_win/vc14_uwd/: tbb.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib
photon_mapping/tbb/lib/ia32_win/vc_mt/: tbb.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbbind_debug.lib  tbbmalloc_proxy.lib  tbbproxy_debug.lib
photon_mapping/tbb/lib/intel64_win/vc14_uwd/: tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib
photon_mapping/tbb/lib/intel64_win/vc_mt/: tbb_preview.lib  tbb_preview_debug.lib  tbbbind.lib  tbbbind_debug.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
prueba_embree/: CMakeLists.txt  main.cpp  prueba_embree.cpp  prueba_embree.h
prueba_embree/include/: Esfera.h  Light.h  Object.h  PhotonKDTree.h  PhotonMapper.h  Plano.h  PointLight.h  Raytracer.h  Render.h  Scene.h  Settings.h  SquareLight.h  Xml.h  niederreiter2.h  tiny_obj_loader.h
prueba_embree/modelos/: gatolow.mtl
prueba_embree/src/: Esfera.cpp  Light.cpp  Object.cpp  PhotonKDTree.cpp  PhotonMapper.cpp  Plano.cpp  PointLight.cpp  Raytracer.cpp  Render.cpp  Scene.cpp  Settings.cpp  SquareLight.cpp  Xml.cpp
prueba_embree/tbb/: index.html
prueba_embree/tbb/lib/ia32_win/vc14_uwd/: tbb_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbproxy_debug.lib
prueba_embree/tbb/lib/ia32_win/vc_mt/: tbb_debug.lib  tbbbind.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib
prueba_embree/tbb/lib/intel64_win/vc14_uwd/: tbb.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
prueba_embree/tbb/lib/intel64_win/vc_mt/: tbb.lib  tbb_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib
xml/: config.xml
xml/escenas/: escena1.xml
xml/mapa_fotones/: escena1-1000.xml  escena1-5000.xml
